# SpeakV

./: Cargo.toml  README.md  build.ps1  build_error.txt  release.ps1  user_config.txt
src/: app.rs  audio.rs  lib.rs  main.rs  network.rs  server.rs  updater.rs
