[package]
name = "speakv"
version = "0.5.0"
edition = "2021"
default-run = "speakv"

[dependencies]
eframe = "0.29.1" # GUI
egui = "0.29.1"
cpal = "0.15.3"   # Low-level Audio
tokio = { version = "1.40.0", features = ["full"] } # Async Runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
bcrypt = "0.15.0" # JSON parsing
bincode = "1.3.3"
anyhow = "1.0"
crossbeam-channel = "0.5.13" # For thread-safe communication between audio/net and GUI
ringbuf = "0.4.0" # Lock-free ring buffer for audio
igd-next = "0.14.3"
public-ip = "0.2.2"
local-ip-address = "0.6.3"
self_update = { version = "0.41", features = ["archive-zip"] } # Auto-update
reqwest = { version = "0.12", features = ["blocking", "json"] } # HTTP client
chrono = "0.4" # Date and time
